<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/clear_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_response"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/editText_user_name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_gravity="center_horizontal"
        android:hint="Password"
        />
    <Button
        android:id="@+id/button_hit_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_call"
        android:layout_gravity="center_horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/response" />
    </ScrollView>

</LinearLayout>